--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Meu primeiro site no GitHup Pages</title>
-</head>
-<body>
-    <h1>Eu sou um jovem Full-Stack</h1>
-</body>
-</html>
+<!DOCTYPE html><html lang=pt-br><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><link rel=icon href=/favicon.ico><title>Aipo</title><link href=/static/css/clientes.2a6f62c4.css rel=prefetch><link href=/static/css/counter.fcdc3e43.css rel=prefetch><link href=/static/css/fornecedores.2daeb560.css rel=prefetch><link href=/static/css/home.0037daf5.css rel=prefetch><link href=/static/css/login.1b25740d.css rel=prefetch><link href=/static/css/produtos.616258b8.css rel=prefetch><link href=/static/js/clientes.a5dd604d.js rel=prefetch><link href=/static/js/counter.ab34a447.js rel=prefetch><link href=/static/js/fornecedores.48b6ea78.js rel=prefetch><link href=/static/js/home.f3ec497e.js rel=prefetch><link href=/static/js/login.e3e8ebd7.js rel=prefetch><link href=/static/js/produtos.504975c8.js rel=prefetch><link href=/static/css/app.e8664a56.css rel=preload as=style><link href=/static/css/chunk-vendors.d6d1f2bf.css rel=preload as=style><link href=/static/js/app.11ae2e8c.js rel=preload as=script><link href=/static/js/chunk-vendors.e28d79e9.js rel=preload as=script><link href=/static/css/chunk-vendors.d6d1f2bf.css rel=stylesheet><link href=/static/css/app.e8664a56.css rel=stylesheet></head><body><div><noscript><strong>We're sorry but Aipo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div></div><script src=/static/js/chunk-vendors.e28d79e9.js></script><script src=/static/js/app.11ae2e8c.js></script></body><style scoped>body {
+      background-color: #27293d;
+      /* background-color: rgb(47, 41, 83); */
+    }</style></html>
